[tool.poetry]
name = "blaze-music-bot"
version = "1.0.0"
description = "Telegram Music Bot"

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.34.0"
pytgcalls = "^3.0.1"
yt-dlp = "^2024.12.23"
aiohttp = "^3.9.3"
Pillow = "^10.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
